# LSLR

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  analysis.md  baseline_wrapper.cpp  baseline_wrapper.hpp  benchmark.cpp  benchmark_full.cpp  compare.cpp  main.cpp  test.cpp  test_lslr.cpp
include/: baselines.hpp  common.hpp  data_generator.hpp  lslr_pla.hpp  optimal_pla.hpp
results/: experiment_output.txt  experiment_results.csv
scripts/: plot_results.py
src/: baselines.cpp  data_generator.cpp  lslr_pla.cpp  optimal_pla.cpp
